--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>The hammer and sickle</li>
         <li>Starvation</li>
     </ul>
-    <img src="images/IMG_5086.jpg" alt="Trabant car in Budapest">
+    <img src="images/IMG_5086.JPG" alt="Trabant car in Budapest">
     
     <script src="scripts/main.js"></script>
   </body>
